@@ -28,6 +28,7 @@
 	- use waitpid rather than SIGCHLD reaper.
 	- rip out DB_PRIVATE revert if not NPTL, it's not the right thing to do.
 	- don't classify files in /dev (#146623).
+	- don't build with sqlite3 if <sqlite3.h> is missing.
 
 4.3.3 -> 4.4:
 	- pentium3/pentium4 arch support (pluto@PLD).
